// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Event"
  />
   
  <div
    class="flex-grow h-full"
  >
    <header
      class="text-gray-900 bg-white"
    >
      <div
        class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-6"
      >
        <h1
          class="text-3xl font-bold leading-tight font-heading"
        >
          
          Create Event
        
        </h1>
      </div>
    </header>
     
    <main>
      <!---->
       
      <!---->
       
      <div
        class="bg-white"
      >
        <div
          class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
        >
          <div
            class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
          >
            <form
              class="col-span-2"
            >
              <div>
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Name:"
                >
                  Name:
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Name:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Date: (YYYY-MM-DD)"
                >
                  Date: (YYYY-MM-DD)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Date: (YYYY-MM-DD)"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Club/ Organiser:"
                >
                  Club/ Organiser:
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Club/ Organiser:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Website: (URL)"
                >
                  Website: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Website: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Results: (URL)"
                >
                  Results: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Results: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Winsplits: (URL)"
                >
                  Winsplits: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Winsplits: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Routegadget: (URL)"
                >
                  Routegadget: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Routegadget: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="League:"
                >
                  
    League:
  
                </label>
                 
                <div
                  class="relative"
                >
                  <span
                    class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                  >
                    <svg
                      class="w-5 h-5 text-gray-400"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 9l-7 7-7-7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                   
                  <select
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="League:"
                  >
                    <option />
                     
                  </select>
                </div>
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="More Information:"
                >
                  More Information:
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="More Information:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-6 text-left"
              >
                <label
                  class="relative flex flex-row items-center select-none"
                >
                  <svg
                    class="absolute left-0 w-5 h-5 text-white"
                    fill="currentColor"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
                    />
                  </svg>
                   
                  <input
                    class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
                    type="checkbox"
                  />
                   
                  <span
                    class="ml-3 leading-tight text-gray-600 font-heading"
                  >
                    Allow Users to Submit Results
                  </span>
                </label>
              </div>
               
              <button
                class="mt-8 button-lg"
              >
                Create Event
              </button>
               
              <!---->
            </form>
          </div>
        </div>
      </div>
    </main>
     
    <!---->
  </div>
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Event"
  />
   
  <div
    class="flex-grow h-full"
  >
    <header
      class="text-gray-900 bg-white"
    >
      <div
        class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-6"
      >
        <h1
          class="text-3xl font-bold leading-tight font-heading"
        >
          
          Edit Event
        
        </h1>
      </div>
    </header>
     
    <main>
      <!---->
       
      <!---->
       
      <div
        class="bg-white"
      >
        <div
          class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
        >
          <div
            class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
          >
            <form
              class="col-span-2"
            >
              <div>
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Name:"
                >
                  Name:
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Name:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Date: (YYYY-MM-DD)"
                >
                  Date: (YYYY-MM-DD)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Date: (YYYY-MM-DD)"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Club/ Organiser:"
                >
                  Club/ Organiser:
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Club/ Organiser:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Website: (URL)"
                >
                  Website: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Website: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Results: (URL)"
                >
                  Results: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Results: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Winsplits: (URL)"
                >
                  Winsplits: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Winsplits: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="Routegadget: (URL)"
                >
                  Routegadget: (URL)
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="Routegadget: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="League:"
                >
                  
    League:
  
                </label>
                 
                <div
                  class="relative"
                >
                  <span
                    class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                  >
                    <svg
                      class="w-5 h-5 text-gray-400"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 9l-7 7-7-7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                   
                  <select
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="League:"
                  >
                    <option />
                     
                  </select>
                </div>
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading"
                  for="More Information:"
                >
                  More Information:
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                  id="More Information:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-6 text-left"
              >
                <label
                  class="relative flex flex-row items-center select-none"
                >
                  <svg
                    class="absolute left-0 w-5 h-5 text-white"
                    fill="currentColor"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
                    />
                  </svg>
                   
                  <input
                    class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
                    type="checkbox"
                  />
                   
                  <span
                    class="ml-3 leading-tight text-gray-600 font-heading"
                  >
                    Allow Users to Submit Results
                  </span>
                </label>
              </div>
               
              <!---->
               
              <button
                class="mt-8 button-lg"
              >
                Update Event
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
     
    <!---->
  </div>
</div>
`;
